# trajectory-diagnostics-toolkit

./: .gitignore  CMakeLists.txt  README.md  TimedPose.hpp  TrajectoryDiagnostics.cpp  TrajectoryDiagnostics.hpp  TrajectoryIO.cpp  TrajectoryIO.hpp  TrajectoryTests.cpp  TrajectoryUtils.cpp  TrajectoryUtils.hpp  main.cpp  trajectory_diagnostics
data/: trajectory_data.csv  trajectory_data_expansive.csv
